Small notation fix

--- a/turan.tex
+++ b/turan.tex
@@ -1250,7 +1250,7 @@ we take $Q_i$ to be all the points of $Q'=\{n/2,\ldots,n\}^2$ on the line $\{(x,
    \centerline{\includegraphics[height=3cm]{figs/helper-18}
    \hspace{2cm}\includegraphics[height=3cm]{figs/lower-bounds-5}}
    We repeatedly take every second point on the diagonal $y=x-1$, i.e.,
-   for each $i\in\{1,\ldots,n\}$, $Q_i=\{(2i-1,2(i-2): i\in\{1,\ldots,\lfloor n/2\rfloor\}\}$.
+   for each $i\in\{1,\ldots,n\}$, $Q_i=\{(2j-1,2(j-2): j\in\{1,\ldots,\lfloor n/2\rfloor\}\}$.
 \end{proof}
 
 
