one author per line + add thanks aurélien

--- a/turan.tex
+++ b/turan.tex
@@ -33,9 +33,14 @@ urlcolor=linkblue}
 
 \title{\MakeUppercase{More Turán-Type Theorems for Triangles in Convex Point Sets}\thanks{This research is partially funded by NSERC.}}
 
-\author{Boris Aronov, Vida Dujmović, Ruy Fabila, Pat Morin, Aurélien Ooms,\\
-and Luís Fernando Schultz Xavier da Silveira  }
-
+\author{%
+Boris Aronov,
+Vida Dujmović,
+Ruy Fabila,
+Pat Morin,
+Aurélien Ooms\thanks{Supported by the Fund for Research Training in Industry and Agriculture (FRIA).},\\
+and Luís Fernando Schultz Xavier da Silveira%
+}
 
 \newcommand{\taco}{\raisebox{-.1ex}{\includegraphics[height=1.6ex]{figs/triangles-edge-1}}}
 \newcommand{\mariposa}{\raisebox{-.1ex}{\includegraphics[height=1.6ex]{figs/triangles-edge-2}}}
