--- a/turan.tex
+++ b/turan.tex
@@ -95,7 +95,7 @@ can share an edge (\taco\ and \mariposa), 3 ways in which the triangles
 can share a single vertex (\bat, \nested, and \crossing), and 3 ways
 in which the triangles can have no vertices in common (\ears, \swords,
 and \david).  Because it is difficult to keep track of nameless entities,
-we assign a mnemonic to each configuration (though the reader is encourage
+we assign a mnemonic to each configuration (though the reader is encouraged
 to choose their own):
 
 \begin{center}
