add missing \includegraphics

--- a/turan.tex
+++ b/turan.tex
@@ -1069,7 +1069,7 @@ appear in $H^{\max}_i$, $H^{\min}_i$ and $V^1_i$ and $V^2_i$.
 \seclabel{tripods}
 
 In this section, we discuss $\ex(n,\{\taco,\nested\})$:\\
-\centerline{[height=3cm]{figs/helper-13}}
+\centerline{\includegraphics[height=3cm]{figs/helper-13}}
 Determining the asymptotics of $\ex(n,\{\taco,\nested\})$ was given
 explicitly as open problem in the conclusion of Bra\ss's paper.
 We spent more than a year work on this problem. This work included
