add institution and email address for Aurélien

--- a/turan.tex
+++ b/turan.tex
@@ -38,7 +38,10 @@ Boris Aronov,
 Vida Dujmović,
 Ruy Fabila,
 Pat Morin,
-Aurélien Ooms\thanks{Supported by the Fund for Research Training in Industry and Agriculture (FRIA).},\\
+Aurélien Ooms\thanks{Supported by the Fund for Research Training in Industry and Agriculture (FRIA).
+Département d'Informatique, Université libre de Bruxelles (ULB), Belgium.
+\texttt{aureooms@ulb.ac.be}
+},\\
 and Luís Fernando Schultz Xavier da Silveira%
 }
 
