comment out previous results table

--- a/turan.tex
+++ b/turan.tex
@@ -132,40 +132,41 @@ on the maximum number of maximum area/perimeter triangles determined
 by a point set. Bra\ss\ \cite{brass:turan} later began a systematic
 study in which he gave asymptotically tight bounds on $\ex(n,X)$ for all
 singleton $X$ and all pairs $X$ of configurations in which two triangles share
-a single vertex.  These previous results are listed in \tabref{previous}.
+a single vertex.
+%These previous results are listed in \tabref{previous}.
 
-\begin{table}
-\centering{
-\begin{tabular}{m{.55\textwidth}m{.4\textwidth}}
-  \hline
-  \textbf{Result} & \textbf{Ref.} \\ \hline\hline
-  $\ex(n,\{\mariposa\})\in \Theta(n^3)$ \newline
-  $\ex(n,\{\taco\})\in \Theta(n^2)$ & \cite{brass:turan} \\
-  \hline
-  $\ex(n,\{\bat\})\in \Theta(n^3)$ \newline
-  $\ex(n,\{\nested\})\in \Theta(n^2)$ \newline
-  $\ex(n,\{\crossing\})\in \Theta(n^2)$ & \cite{brass:turan} \\
-  \hline
-  $\ex(n,\{\ears\})\in \Theta(n^3)$ \newline
-  $\ex(n,\{\swords\})\in \Theta(n^2)$ \newline
-  $\ex(n,\{\david\})\in \Theta(n^2)$ & \cite{brass:turan} \\
-  \hline
-  $\ex(n,\{\bat,\nested\})\in \Theta(n^2)$ \newline 
-  $\ex(n,\{\nested,\crossing\})\in \Theta(n^2)$ \newline
-  $\ex(n,\{\bat,\crossing\})\in \Theta(n^2)$ & \cite{brass:turan} \\
-  \hline
-  $\ex(n,\{\ears,\swords,\bat,\nested\}) = n$ \newline
-  $\on(n,\{\taco,\mariposa,\david,\crossing\}) = n$
-    & \cite{brass.rote.ea:triangles} \\
-  \hline
-  $\ex(n,\{\bat,\nested,\crossing\}) \in \Theta(n)$ \newline
-  $\ex(n,\{\taco,\mariposa\}) \in \Theta(n^2)$ \newline 
-  $\ex(n,\{\ears,\swords,\david\}) \in \Theta(n^2)$ & from hypergraphs \\ \hline
-  \end{tabular}
-}
-\caption{Known results on $\ex(n,X)$ for different sets $X$.}
-\tablabel{previous}
-\end{table}
+%\begin{table}
+%\centering{
+%\begin{tabular}{m{.55\textwidth}m{.4\textwidth}}
+  %\hline
+  %\textbf{Result} & \textbf{Ref.} \\ \hline\hline
+  %$\ex(n,\{\mariposa\})\in \Theta(n^3)$ \newline
+  %$\ex(n,\{\taco\})\in \Theta(n^2)$ & \cite{brass:turan} \\
+  %\hline
+  %$\ex(n,\{\bat\})\in \Theta(n^3)$ \newline
+  %$\ex(n,\{\nested\})\in \Theta(n^2)$ \newline
+  %$\ex(n,\{\crossing\})\in \Theta(n^2)$ & \cite{brass:turan} \\
+  %\hline
+  %$\ex(n,\{\ears\})\in \Theta(n^3)$ \newline
+  %$\ex(n,\{\swords\})\in \Theta(n^2)$ \newline
+  %$\ex(n,\{\david\})\in \Theta(n^2)$ & \cite{brass:turan} \\
+  %\hline
+  %$\ex(n,\{\bat,\nested\})\in \Theta(n^2)$ \newline 
+  %$\ex(n,\{\nested,\crossing\})\in \Theta(n^2)$ \newline
+  %$\ex(n,\{\bat,\crossing\})\in \Theta(n^2)$ & \cite{brass:turan} \\
+  %\hline
+  %$\ex(n,\{\ears,\swords,\bat,\nested\}) = n$ \newline
+  %$\on(n,\{\taco,\mariposa,\david,\crossing\}) = n$
+    %& \cite{brass.rote.ea:triangles} \\
+  %\hline
+  %$\ex(n,\{\bat,\nested,\crossing\}) \in \Theta(n)$ \newline
+  %$\ex(n,\{\taco,\mariposa\}) \in \Theta(n^2)$ \newline 
+  %$\ex(n,\{\ears,\swords,\david\}) \in \Theta(n^2)$ & from hypergraphs \\ \hline
+  %\end{tabular}
+%}
+%\caption{Known results on $\ex(n,X)$ for different sets $X$.}
+%\tablabel{previous}
+%\end{table}
 
 Of course, upper and lower bounds are inherited through the subset
 relationship: $\ex(n,X) \le \ex(n,Y)$ for any $X\supseteq Y$.
