--- a/turan.tex
+++ b/turan.tex
@@ -262,7 +262,7 @@ In this section we present an easy result that cuts our work in half
 by reducing the number of problems from 256 to 128.  We then describe
 different variants of the problem, some of which are easier to work with.
 
-\subsection{Edge-Sharing Non-Overlapping Triangles are Irrelevant}
+\subsection{Mariposas are Irrelevant}
 
 The following lemma shows that including the $\mariposa$ configuration in
 the set $X$ of forbidden configurations has no effect on the asymptotics
