--- a/turan.tex
+++ b/turan.tex
@@ -826,7 +826,7 @@ that is similar to \lemref{forbidden}.
 \begin{proof}
   Refer to \figref{se-domination}.
   We say that a point $(x_i,y_i)$ \emph{SE-dominates} a point $(x_j,y_j)$
-  if $x_i > x_j$ and $y_i > y_j$.  Consider the \emph{Pareto boundary}
+  if $x_i > x_j$ and $y_i < y_j$.  Consider the \emph{Pareto boundary}
   $P\subset S$ containing each point of $S$ that not SE-dominated by any
   other point in $S$.  The set $P$ is non-decreasing, so it has size at
   most $2n$.  We claim that the set $S\setminus P$ has at most one point
