--- a/turan.tex
+++ b/turan.tex
@@ -311,7 +311,7 @@ of $\ex(n,X)$.
 
 Since it is not explicitly stated in previous work, and we need it to complete our table, we now observe that for any configuration $x\in\{\taco,\bat,\nested,\crossing,\ears,\swords,\david\}$, one can create a linear-sized set of triangles that avoids all configurations except $x$.
 
-\begin{thm}
+\begin{thm}\thmlabel{linear-lower}
 For any $X\subset\{\taco,\bat,\nested,\crossing,\ears,\swords,\david\}$,
 $\ex(n,X)\in \Omega(n)$.
 \end{thm}
@@ -320,12 +320,31 @@ $\ex(n,X)\in \Omega(n)$.
   Let $x\in\{\taco,\bat,\nested,\crossing,\ears,\swords,\david\}$ be
   a configuration not in $X$.  Label the vertices of our convex $n$-gon
   $1,\ldots,n$ in counterclockwise order.  Depending on the value of $x$,
-  we use one of the following constructions:
+  we use one of the following constructions (see \figref{linear-lower}):
+  \begin{figure}
+    \centering{
+      \begin{tabular}{ccccccc}
+       \includegraphics{figs/linear-lower-1} &
+       \includegraphics{figs/linear-lower-2} &
+       \includegraphics{figs/linear-lower-3} \\
+       \taco & \bat & \nested \\[1em]
+       \includegraphics{figs/linear-lower-4} & 
+       \includegraphics{figs/linear-lower-5} &
+       \includegraphics{figs/linear-lower-6} \\
+       \crossing & \ears & \swords \\[1em]
+       &
+       \includegraphics{figs/linear-lower-7} \\
+       & \david
+      \end{tabular}
+    }
+    \caption{The proof of \thmref{linear-lower}.}
+    \figlabel{linear-lower}
+  \end{figure}
  \begin{enumerate}
     \item For $x=\taco$ we use the set of triangles $\{(1,2,i):i\in\{3,\ldots,n\}\}$.
     \item For $x=\bat$ we use the set of triangles $\{(1,2i,2i+1): i\in\{1,\ldots,\lfloor n/2\rfloor-1 \}\}$.
     \item For $x=\nested$ we use the set of triangles $\{(1,i,n+2-i): i\in\{2, \ldots, \lfloor n/2\rfloor\}\}$.
-    \item For $x=\crossing$ we use the set of triangles $\{(1,i,\lfloor n/2\rfloor+i): i\in\{2,\ldots, \lfloor n/2\rfloor-1\}\}$.
+    \item For $x=\crossing$ we use the set of triangles $\{(1,i,\lfloor n/2\rfloor+i): i\in\{2,\ldots, \lfloor n/2\rfloor\}\}$.
     \item For $x=\ears$ we use the set of triangles $\{(3i-2,3i-1,3i): i\in\{1,\ldots, \lfloor n/3\rfloor\}\}$.
     \item For $x=\swords$ we use the set of triangles $\{(i,\lfloor n/3\rfloor+2i-1,\lfloor n/3\rfloor+2i): i\in\{1,\ldots, \lfloor n/3\rfloor\}\}$.
     \item For $x=\david$ we use the set of triangles $\{(i,\lfloor n/3\rfloor+i,\lfloor 2n/3\rfloor+i): i\in\{1,\ldots, \lfloor n/3\rfloor\}\}$.
@@ -691,7 +710,8 @@ configurations of points:
     \centering{
       \includegraphics{figs/forbidden}
     }
-    \caption{The proof of \thmref{taco-nested-david}}
+    \caption{The proof of \thmref{taco-nested-david}. Any point $c$
+     that SE-dominates $b$ will complete the forbidden configuration $a,b,c$.}
     \figlabel{forbidden}
   \end{figure}
 \end{proof}
@@ -819,15 +839,15 @@ that is similar to \lemref{forbidden}.
 
 \begin{lem}\lemlabel{forbidden-ii}
    Let $S$ be a subset of $\{1,\ldots,n\}^2$ with no three
-   points $a=(x_0,y_0)$, $b=(x_0,y_1)$, and $c=(x_1,y_1)$ with $y_1>y_0$,
-   $x_1>x_0$ and $y_2>y_1$.  Then $|S|\le 2n$.
+   points $a=(x_0,y_0)$, $b=(x_0,y_1)$, and $c=(x_1,y_1)$ with $x_1>x_0$ and 
+   $y_2>y_1>y_0$.  Then $|S|\le 2n$.
 \end{lem}
 
 \begin{proof}
   Refer to \figref{se-domination}.
   We say that a point $(x_i,y_i)$ \emph{SE-dominates} a point $(x_j,y_j)$
   if $x_i > x_j$ and $y_i < y_j$.  Consider the \emph{Pareto boundary}
-  $P\subset S$ containing each point of $S$ that not SE-dominated by any
+  $P\subseteq S$ containing each point of $S$ that is not SE-dominated by any
   other point in $S$.  The set $P$ is non-decreasing, so it has size at
   most $2n$.  We claim that the set $S\setminus P$ has at most one point
   in each column, so $|S|\le 3n$.  To see why this claim is true, observe
@@ -848,8 +868,7 @@ that is similar to \lemref{forbidden}.
   We claim that $S$ satisfies the conditions of \lemref{forbidden-ii},
   so $|S|\le 3n$.
 
-  To see why $S$ satisfies the conditions of \lemref{forbidden-ii},
-  suppose there were $a\in Q_i$, $b\in Q_j$, and $c\in Q_k$ forming the
+  Suppose there were $a\in Q_i$, $b\in Q_j$, and $c\in Q_k$ forming the
   forbidden configuration of \lemref{forbidden-ii}.  
   Now, $a\in\killed(\{\swords\}, \{c\})$ and 
   $c\in\killed(\{\swords\}, \{a\})$, so it must be that $i=k$.  The same
@@ -875,10 +894,11 @@ that is similar to \lemref{forbidden}.
    Consider the graph $G$ with vertex set $S$ and that contains an
    edge $uw$ if and only if the $x$-coordinate of $u$ is equal to the
    $y$-coordinate of $w$.  We claim that $G$ is 4-colorable.  To prove
-   this, we partition $S$ into two sets $A$ and $B$
-   and show that each of the graphs $G[A]$ and $G[B]$ induced by $A$
-   and $B$ is 2-colourable. Thus, if we color $A$ with colors $\{1,2\}$
-   and $B$ with colours $\{3,4\}$, then we obtaine a 4-colouring of $G$.
+   this, we partition $S$ into two sets $A$ and $B$ and show that each of
+   the graphs $G[A]$ and $G[B]$ induced by $A$ and $B$ is 2-colourable
+   (in fact, $G[A]$ and $G[B]$ are each forests). Thus, if we color $A$
+   with colors $\{1,2\}$ and $B$ with colours $\{3,4\}$, then we obtain
+   a 4-colouring of $G$.
 
    Refer to \figref{four-colouring}.  Remove the bottom-most point of
    $S$ from each column and what remains is the set $A$.  Observe that,
@@ -889,7 +909,7 @@ that is similar to \lemref{forbidden}.
    is also obviously acyclic, so there is an ordering $v_1,\ldots,v_{|A|}$
    of $A$ such that, for every $i\in\{1,\ldots,|A|\}$, $v_i$ is adjacent
    in $G[A]$ to at most one of $v_1,\ldots,v_{i-1}$.  We can therefore
-   greedily 2-color $G[A]$ by colouring $v_1,\ldots,V_{|A|}$ in order and,
+   greedily 2-color $G[A]$ by colouring $v_1,\ldots,v_{|A|}$ in order and,
    when colouring $v_i$, we use any colour in $\{1,2\}$ not already used
    by $v_i$'s at most one neighbour in $v_1,\ldots,v_{i-1}$.
 
